feat: add new JSON and shader files for cloud and weather systems